testing/framework/resources/Advanced/Failing/mondrian/query5366.e
Store 21	Deluxe Supermarket	Jones	\N	\N	\N	\N	t	4093 Steven Circle
